Actualizado el notebook de limpieza de datos

--- a/project-notebooks/data-preparation.ipynb
+++ b/project-notebooks/data-preparation.ipynb
@@ -1753,7 +1753,151 @@
    "id": "88796c71",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import dask.dataframe as dd\n",
+    "import numpy as np\n",
+    "import holidays\n",
+    "import gc\n",
+    "\n",
+    "# --- 0. Configuración General ---\n",
+    "MAIN_PARQUET = '../data/official-data/data_ab3_complete.parquet'\n",
+    "OUTPUT_PARQUET_DIR = 'dataset_FINAL_COMPLETO/'\n",
+    "NUMERO_DE_TROZOS = 60\n",
+    "LLAVE_DISTRITO = 'KEY_DISTRITO'\n",
+    "LLAVE_SECCION = 'KEY_SECCION'\n",
+    "\n",
+    "\n",
+    "RENTA_CSV = '../data/open-data/renda_procesada.csv'\n",
+    "ANTIGUITAD_CSV = '../data/open-data/antiguitat_pivotada.csv'\n",
+    "POBLACION_CSV = '../data/open-data/poblacion_pivotada.csv'\n",
+    "OBRES_CSV = '../data/open-data/obres_procesadas.csv'\n",
+    "# --- FIN DE LA ACTUALIZACIÓN ---\n",
+    "\n",
+    "# --- 1. Cargar y Preparar Tablas Pequeñas (con PANDAS) ---\n",
+    "print(\"Cargando 4 datasets geográficos...\")\n",
+    "dtype_llaves = {LLAVE_DISTRITO: 'string', LLAVE_SECCION: 'string'}\n",
+    "df_renta = pd.read_csv(RENTA_CSV, dtype=dtype_llaves)\n",
+    "df_antiguitat = pd.read_csv(ANTIGUITAD_CSV, dtype=dtype_llaves)\n",
+    "df_poblacion = pd.read_csv(POBLACION_CSV, dtype=dtype_llaves)\n",
+    "df_obres = pd.read_csv(OBRES_CSV, dtype=dtype_llaves)\n",
+    "\n",
+    "print(\"Uniendo archivos geográficos...\")\n",
+    "df_geo_total = df_renta.merge(df_antiguitat, on=[LLAVE_DISTRITO, LLAVE_SECCION], how='outer')\n",
+    "df_geo_total = df_geo_total.merge(df_poblacion, on=[LLAVE_DISTRITO, LLAVE_SECCION], how='outer')\n",
+    "df_geo_total = df_geo_total.merge(df_obres, on=[LLAVE_DISTRITO, LLAVE_SECCION], how='outer')\n",
+    "nuevas_columnas_geo = df_geo_total.columns.drop([LLAVE_DISTRITO, LLAVE_SECCION]).tolist()\n",
+    "df_geo_total = df_geo_total.fillna(0)\n",
+    "print(f\"Tabla de características GEO creada con {len(df_geo_total)} filas.\")\n",
+    "\n",
+    "# 1B: Preparar datos METEO (Del Notebook)\n",
+    "print(\"Cargando datos de AEMET...\")\n",
+    "df_aemet1 = pd.read_json('../data/open-data/data_aemet_1.json')\n",
+    "df_aemet2 = pd.read_json('../data/open-data/data_aemet_2.json')\n",
+    "df_aemet = pd.concat([df_aemet1, df_aemet2], ignore_index=True)\n",
+    "df_aemet = df_aemet[['fecha', 'tmed', 'tmin', 'tmax', 'prec', 'hrMedia']]\n",
+    "df_aemet.fillna({'prec': 0}, inplace=True)\n",
+    "cols_to_rename = {\n",
+    "    'fecha': 'FECHA', 'tmed': 'TEMP_MEDIA', 'tmin': 'TEMP_MIN',\n",
+    "    'tmax': 'TEMP_MAX', 'prec': 'PRECIPITACION', 'hrMedia': 'HUMEDAD_RELATIVA_MEDIA'\n",
+    "}\n",
+    "df_aemet.rename(columns=cols_to_rename, inplace=True)\n",
+    "df_aemet['FECHA'] = pd.to_datetime(df_aemet['FECHA'], errors='coerce')\n",
+    "nuevas_columnas_meteo = list(cols_to_rename.values())[1:]\n",
+    "\n",
+    "# 1C: Preparar datos FESTIVOS (Del Notebook)\n",
+    "print(\"Generando datos de Festivos...\")\n",
+    "fechas = pd.date_range(start='2024-01-01', end='2024-12-31')\n",
+    "df_fechas = pd.DataFrame({'FECHA': fechas})\n",
+    "es_holidays = holidays.CountryHoliday('ES', subdiv='CT', years=2024)\n",
+    "df_fechas['FESTIVO'] = df_fechas['FECHA'].apply(lambda date: date in es_holidays)\n",
+    "def get_tipo_dia_simple(fecha, es_festivo):\n",
+    "    if es_festivo: return 'Festivo'\n",
+    "    elif fecha.weekday() >= 5: return 'Fin de Semana'\n",
+    "    else: return 'Laborable'\n",
+    "df_fechas['TIPO_DIA'] = df_fechas.apply(lambda row: get_tipo_dia_simple(row['FECHA'], row['FESTIVO']), axis=1)\n",
+    "df_fechas['FECHA'] = pd.to_datetime(df_fechas['FECHA'], errors='coerce')\n",
+    "nuevas_columnas_festivos = ['FESTIVO', 'TIPO_DIA']\n",
+    "\n",
+    "# 1D: Unir tablas pequeñas de Meteo y Festivos\n",
+    "df_meteo_festivos = pd.merge(df_aemet, df_fechas, on='FECHA', how='outer')\n",
+    "\n",
+    "# --- 2. Cargar y Preparar Tabla Gigante (con DASK) ---\n",
+    "print(\"Cargando archivo principal (76M filas) con DASK...\")\n",
+    "df_main_dask = dd.read_parquet(MAIN_PARQUET)\n",
+    "print(f\"Creando {NUMERO_DE_TROZOS} trozos más pequeños...\")\n",
+    "df_main_dask = df_main_dask.repartition(npartitions=NUMERO_DE_TROZOS)\n",
+    "\n",
+    "# 2A: Limpiar SECCIO_CENSAL\n",
+    "df_main_dask = df_main_dask.dropna(subset=['SECCIO_CENSAL'])\n",
+    "\n",
+    "# 2B: Imputar CONSUMO_REAL\n",
+    "df_main_dask['CONSUMO_REAL'] = df_main_dask['CONSUMO_REAL'].fillna(0)\n",
+    "\n",
+    "# 2C: Crear Columnas FUGA (Manejando nulos)\n",
+    "def crear_columnas_fuga(df_particion):\n",
+    "    df_particion['FUGA_DETECTADA'] = df_particion['CODIGO_MENSAJE'].apply(\n",
+    "        lambda x: 0 if pd.isna(x) else (1 if x in ['FUITA', 'REITERACIÓ DE FUITA'] else 0)\n",
+    "    )\n",
+    "    df_particion['FUGA_REITERADA'] = df_particion['CODIGO_MENSAJE'].apply(\n",
+    "        lambda x: 0 if pd.isna(x) else (1 if x == 'REITERACIÓ DE FUITA' else 0)\n",
+    "    )\n",
+    "    return df_particion\n",
+    "\n",
+    "print(\"Creando columnas de Fuga...\")\n",
+    "new_meta = df_main_dask._meta.copy()\n",
+    "new_meta['FUGA_DETECTADA'] = pd.Series(dtype='int64')\n",
+    "new_meta['FUGA_REITERADA'] = pd.Series(dtype='int64')\n",
+    "df_main_dask = df_main_dask.map_partitions(crear_columnas_fuga, meta=new_meta)\n",
+    "df_main_dask = df_main_dask.drop(columns=['CREATED_MENSAJE', 'CODIGO_MENSAJE', 'TIPO_MENSAJE'])\n",
+    "\n",
+    "# 2D: Separar FECHA_HORA\n",
+    "print(\"Separando Fecha y Hora...\")\n",
+    "df_main_dask['FECHA'] = df_main_dask['FECHA_HORA'].dt.date\n",
+    "df_main_dask['HORA'] = df_main_dask['FECHA_HORA'].dt.time.astype(str) # Corrección V12\n",
+    "df_main_dask['FECHA'] = dd.to_datetime(df_main_dask['FECHA'], errors='coerce')\n",
+    "\n",
+    "# --- 3. MERGES FINALES (con DASK) ---\n",
+    "print(\"Preparando Merge 1 (Meteo + Festivos)...\")\n",
+    "df_main_dask = dd.merge(\n",
+    "    df_main_dask,\n",
+    "    df_meteo_festivos,\n",
+    "    on='FECHA',\n",
+    "    how='left'\n",
+    ")\n",
+    "\n",
+    "print(\"Preparando Merge 2 (Geográfico)...\")\n",
+    "llave_str = df_main_dask['SECCIO_CENSAL'].astype('string')\n",
+    "df_main_dask[LLAVE_DISTRITO] = llave_str.str.slice(5, 7).astype('string')\n",
+    "df_main_dask[LLAVE_SECCION] = llave_str.str.slice(7, 10).astype('string')\n",
+    "\n",
+    "df_final_dask = dd.merge(\n",
+    "    df_main_dask,\n",
+    "    df_geo_total,\n",
+    "    on=[LLAVE_DISTRITO, LLAVE_SECCION],\n",
+    "    how='left'\n",
+    ")\n",
+    "\n",
+    "# --- 4. Limpieza y Guardado Final ---\n",
+    "del df_renta, df_antiguitat, df_poblacion, df_obres, df_geo_total, df_aemet, df_fechas, df_meteo_festivos\n",
+    "gc.collect()\n",
+    "\n",
+    "print(\"Limpiando nulos finales...\")\n",
+    "fill_values_geo = {col: 0 for col in nuevas_columnas_geo}\n",
+    "fill_values_meteo = {col: 0 for col in nuevas_columnas_meteo}\n",
+    "fill_values_festivos = {'FESTIVO': False, 'TIPO_DIA': 'Laborable'} \n",
+    "\n",
+    "df_final_dask = df_final_dask.fillna(value=fill_values_geo)\n",
+    "df_final_dask = df_final_dask.fillna(value=fill_values_meteo)\n",
+    "df_final_dask = df_final_dask.fillna(value=fill_values_festivos)\n",
+    "df_final_dask['FESTIVO'] = df_final_dask['FESTIVO'].astype(bool)\n",
+    "\n",
+    "# --- 5. Ejecutar y Guardado ---\n",
+    "print(\"¡EJECUTANDO! Dask está procesando TODO y guardando en disco...\")\n",
+    "df_final_dask.to_parquet(OUTPUT_PARQUET_DIR, write_index=False)\n",
+    "\n",
+    "print(f\"¡HECHO! Tu dataset final y completo está en la CARPETA: '{OUTPUT_PARQUET_DIR}'\")"
+   ]
   }
  ],
  "metadata": {
