--- a/project-notebooks/model-training.ipynb
+++ b/project-notebooks/model-training.ipynb
@@ -644,14 +644,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fe3ad179",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exportar CSV para Meta-Análisis\n",
     "csv_path = '../data/processed-data/analisis_predicciones.csv'\n",
-    "df_resultados.to_csv(csv_path, index=False, sep=';', decimal=',')\n"
+    "df_resultados.to_csv(csv_path, index=False, sep=';', decimal=',')"
    ]
   }
  ],
