--- a/project-notebooks/model-training.ipynb
+++ b/project-notebooks/model-training.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8d1185bb",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "89c89797",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "74e90ca6",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d01a256d",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "90abafa2",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creando Lags: 100%|██████████| 3/3 [00:06<00:00,  2.24s/it]\n"
+      "Creando Lags: 100%|██████████| 3/3 [00:07<00:00,  2.60s/it]\n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d8fe7cc8",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7d60c9c1",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,13 @@
       "ENTRENAMIENTO DEL MODELO LIGHTGBM (MODO SEGURO)\n",
       "\n",
       "------------------------------------------------------------\n",
-      "Preparando matriz X única...\n",
+      "Preparando matriz X única...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Matriz X preparada: (7245110, 52)\n",
       "\n",
       "[PROCESANDO] TARGET_HOY...\n",
@@ -504,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ca42be56",
    "metadata": {},
    "outputs": [
@@ -549,10 +555,7 @@
       "0.5        0.8385          0.4980          0.6249    \n",
       "0.6        0.8543          0.4038          0.5484    \n",
       "------------------------------------------------------------\n",
-      "✅ RECOMENDACIÓN: Usar umbral > 0.3 para este horizonte.\n",
-      "\n",
-      "✅ Archivo de análisis guardado: ../data/analisis_predicciones.csv\n",
-      "✅ ENTRENAMIENTO COMPLETADO.\n"
+      "✅ RECOMENDACIÓN: Usar umbral > 0.3 para este horizonte.\n"
      ]
     }
    ],
@@ -617,13 +620,7 @@
     "            best_thresh = thresh\n",
     "            \n",
     "    print(\"-\" * 60)\n",
-    "    print(f\"✅ RECOMENDACIÓN: Usar umbral > {best_thresh} para este horizonte.\")\n",
-    "\n",
-    "# Exportar CSV\n",
-    "csv_path = '../data/analisis_predicciones.csv'\n",
-    "df_resultados.to_csv(csv_path, index=False, sep=';', decimal=',')\n",
-    "print(f\"\\n✅ Archivo de análisis guardado: {csv_path}\")\n",
-    "print(\"✅ ENTRENAMIENTO COMPLETADO.\")"
+    "    print(f\"✅ RECOMENDACIÓN: Usar umbral > {best_thresh} para este horizonte.\")"
    ]
   },
   {
@@ -644,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fe3ad179",
    "metadata": {},
    "outputs": [],
@@ -652,6 +649,51 @@
     "# Exportar CSV para Meta-Análisis\n",
     "csv_path = '../data/processed-data/analisis_predicciones.csv'\n",
     "df_resultados.to_csv(csv_path, index=False, sep=';', decimal=',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd29e5f6",
+   "metadata": {},
+   "source": [
+    "## 2.8 Exportación de los resultados a CSV para la simulación"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02b2134f",
+   "metadata": {},
+   "source": [
+    "Se exporta un subconjunto de datos (\"Datos Futuros\") ya procesados y con las features calculadas al formato CSV. Este archivo servirá como fuente de entrada para el Motor de Simulación en Tiempo Real, permitiendo probar la aplicación (app.py) y la lógica de negocio sin necesidad de ejecutar todo el pipeline de entrenamiento cada vez."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2617ab56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo '../data/processed-data/datos_simulacion_features.csv' generado con 1811278 filas.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Seleccionamos el set de prueba (que son datos \"futuros\" con features ya calculadas)\n",
+    "# Incluimos el ID del cliente y todas las features que el modelo necesita (X_COLS)\n",
+    "simulacion_cols = [ID_COLUMN, 'FECHA_HORA_CRONO'] + X_COLS\n",
+    "\n",
+    "# Creamos el archivo para la app\n",
+    "df_simulacion = df_test[simulacion_cols].copy()\n",
+    "\n",
+    "# Guardamos en la carpeta data (para que motor_gesai lo encuentre)\n",
+    "path_simulacion = '../data/processed-data/datos_simulacion_features.csv'\n",
+    "df_simulacion.to_csv(path_simulacion, index=False)\n",
+    "\n",
+    "print(f\"Archivo '{path_simulacion}' generado con {len(df_simulacion)} filas.\")"
    ]
   }
  ],
