--- a/project-notebooks/model-training.ipynb
+++ b/project-notebooks/model-training.ipynb
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2617ab56",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
    ],
    "source": [
     "# Seleccionamos el set de prueba (que son datos \"futuros\" con features ya calculadas)\n",
-    "# Incluimos el ID del cliente y todas las features que el modelo necesita (X_COLS)\n",
+    "# Incluimos el ID del cliente, fecha_hora y todas las features que el modelo necesita (X_COLS)\n",
     "simulacion_cols = [ID_COLUMN, 'FECHA_HORA_CRONO'] + X_COLS\n",
     "\n",
     "# Creamos el archivo para la app\n",
