--- a/project-notebooks/prediction-XAI.ipynb
+++ b/project-notebooks/prediction-XAI.ipynb
@@ -5,15 +5,15 @@
    "id": "1c880989",
    "metadata": {},
    "source": [
-    "# 4. Notebook XAI: Explicabilidad del Modelo GeSAI\n",
+    "# 4. Notebook XAI: Explicabilidad del modelo GeSAI\n",
     "\n",
     "Este notebook tiene como objetivo abrir la \"caja negra\" del modelo de Inteligencia Artificial. Utilizaremos la librería SHAP (SHapley Additive exPlanations) para entender matemáticamente por qué el modelo clasifica ciertas lecturas como \"Fuga\".\n",
     "\n",
     "Analizaremos dos dimensiones:\n",
     "\n",
-    "* Explicabilidad Global: ¿Qué variables son las más importantes en general? (Ej. ¿Pesa más el consumo actual o la media de la semana?)\n",
+    "* Explicabilidad global: ¿Qué variables son las más importantes en general? (Ej. ¿Pesa más el consumo actual o la media de la semana?)\n",
     "\n",
-    "* Explicabilidad Local: ¿Por qué se ha marcado como \"Fuga Grave\" a un cliente específico hoy?"
+    "* Explicabilidad local: ¿Por qué se ha marcado como \"Fuga Grave\" a un cliente específico hoy?"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "id": "fdfd91aa",
    "metadata": {},
    "source": [
-    "## 4.2. Carga del Modelo y Preparación de Datos\n",
+    "## 4.2. Carga del modelo y preparación de Datos\n",
     "\n",
     "Aquí recuperamos el \"cerebro\" (modelo .joblib) y los datos de prueba. Es fundamental filtrar el dataset para quedarnos solo con las columnas que el modelo conoce (las features numéricas como CONSUMO_REAL, RATIO_..., etc.), eliminando identificadores como POLISSA_SUBM o fechas, ya que el modelo no sabe interpretarlos y daría error."
    ]
@@ -162,7 +162,7 @@
    "id": "1022b137",
    "metadata": {},
    "source": [
-    "## 4.3. Cálculo de Valores SHAP (Global Explainability)\n",
+    "## 4.3. Cálculo de valores SHAP (Global explainability)\n",
     "En este paso creamos un TreeExplainer, que es un algoritmo optimizado para modelos de árboles como LightGBM. Calculamos los \"valores SHAP\", que representan cuánto contribuye cada variable (ej: CONSUMO_REAL) a aumentar o disminuir la probabilidad de fuga.\n",
     "\n",
     "Nota: Como es un modelo de clasificación binaria, nos centramos en los valores de la Clase 1 (Fuga)."
@@ -205,7 +205,7 @@
    "id": "52cce5b6",
    "metadata": {},
    "source": [
-    "## 4.4. Visualización Global: Summary Plot y Bar Plot\n",
+    "## 4.4. Visualización global: Summary plot y Bar plot\n",
     "Generamos las gráficas más importantes para el informe.\n",
     "\n",
     "* Summary Plot: Nos dice cómo afectan las variables. (Ej: ¿Un valor alto en RATIO_CONSUMO aumenta o baja el riesgo?). Los puntos rojos a la derecha indican que valores altos causan fugas.\n",
@@ -257,7 +257,7 @@
    "id": "fe7f0396",
    "metadata": {},
    "source": [
-    "## 4.5. Análisis de Dependencia (Deep Dive)\n",
+    "## 4.5. Análisis de dependencia (Deep dive)\n",
     "Profundizamos en la variable más importante (probablemente el consumo o un ratio). Este gráfico nos muestra la relación exacta: ¿A partir de cuántos litros el modelo empieza a disparar la alerta?"
    ]
   },
@@ -301,7 +301,7 @@
    "id": "0cf22155",
    "metadata": {},
    "source": [
-    "## 4.6. Explicabilidad Local (Caso de Uso Real)\n",
+    "## 4.6. Explicabilidad local (Caso de uso real)\n",
     "Aquí simulamos la situación de un operario. Buscamos un caso concreto donde el modelo haya predicho una Fuga Grave (Probabilidad > 90%) y generamos un Gráfico de Cascada (Waterfall). Este gráfico explica paso a paso cómo se construyó esa probabilidad del 90%, sumando el aporte de cada dato."
    ]
   },
