fix model version warning

--- a/project-notebooks/model-training.ipynb
+++ b/project-notebooks/model-training.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d01a256d",
    "metadata": {},
    "outputs": [
@@ -159,9 +159,7 @@
      "text": [
       "--- 2. Carga Distribuida y Muestreo ---\n",
       "Filtrando periodo: 2024-01-01 a 2024-06-30...\n",
-      "Aplicando muestreo del 25% sobre el periodo seleccionado...\n",
-      "✅ Dataset cargado en RAM: 9238937 filas.\n",
-      "Ordenando datos...\n"
+      "Aplicando muestreo del 25% sobre el periodo seleccionado...\n"
      ]
     }
    ],
@@ -231,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "90abafa2",
    "metadata": {},
    "outputs": [
@@ -239,7 +237,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creando Lags: 100%|██████████| 3/3 [00:07<00:00,  2.60s/it]\n"
+      "Creando Lags: 100%|██████████| 3/3 [00:05<00:00,  1.90s/it]\n"
      ]
     }
    ],
@@ -297,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d8fe7cc8",
    "metadata": {},
    "outputs": [
@@ -377,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7d60c9c1",
    "metadata": {},
    "outputs": [
@@ -390,13 +388,7 @@
       "ENTRENAMIENTO DEL MODELO LIGHTGBM (MODO SEGURO)\n",
       "\n",
       "------------------------------------------------------------\n",
-      "Preparando matriz X única...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Preparando matriz X única...\n",
       "Matriz X preparada: (7245110, 52)\n",
       "\n",
       "[PROCESANDO] TARGET_HOY...\n",
@@ -510,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ca42be56",
    "metadata": {},
    "outputs": [
@@ -641,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "fe3ad179",
    "metadata": {},
    "outputs": [],
@@ -669,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2617ab56",
    "metadata": {},
    "outputs": [
