--- a/project-notebooks/model-training.ipynb
+++ b/project-notebooks/model-training.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d01a256d",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,9 @@
      "text": [
       "--- 2. Carga Distribuida y Muestreo ---\n",
       "Filtrando periodo: 2024-01-01 a 2024-06-30...\n",
-      "Aplicando muestreo del 25% sobre el periodo seleccionado...\n"
+      "Aplicando muestreo del 25% sobre el periodo seleccionado...\n",
+      "✅ Dataset cargado en RAM: 9238937 filas.\n",
+      "Ordenando datos...\n"
      ]
     }
    ],
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "90abafa2",
    "metadata": {},
    "outputs": [
@@ -237,7 +239,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creando Lags: 100%|██████████| 3/3 [00:05<00:00,  1.90s/it]\n"
+      "Creando Lags: 100%|██████████| 3/3 [00:06<00:00,  2.00s/it]\n"
      ]
     }
    ],
@@ -295,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d8fe7cc8",
    "metadata": {},
    "outputs": [
@@ -375,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7d60c9c1",
    "metadata": {},
    "outputs": [
@@ -388,7 +390,13 @@
       "ENTRENAMIENTO DEL MODELO LIGHTGBM (MODO SEGURO)\n",
       "\n",
       "------------------------------------------------------------\n",
-      "Preparando matriz X única...\n",
+      "Preparando matriz X única...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Matriz X preparada: (7245110, 52)\n",
       "\n",
       "[PROCESANDO] TARGET_HOY...\n",
